tests/paczka1/fuzzy1/41264644.err
Error in line 16: S404 A818 -1,6
Error in line 9: eByee5 S116 12,3
Error in line 17: y1pXNov A818 84,4
Error in line 19: eByee5 S998 69,7
Error in line 20: y1pXNov S404 5,0
Error in line 21: eByee5 S116 10,6
Error in line 22: y1pXNov S116 13,1
Error in line 33: kitBbh S116 52,7
Error in line 35: kitBbh A818 6,0
